--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <a href="./OtrapagMismaPestania.html" target="_blank">
         <p />Enlace otra pag OTRA pestaña
     </a>
+        <a href="./Preguntas.html" target="_blank">
+        <p />Enlace a preguntas del ejercicio...
+    </a>
 
     <a href="#ANCLAJE">
         <p> Voy al anclaje al final de la página...</p>
